<resources>
	<string name="app_name">Buy it together!</string>

	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
	<string name="title_activity_yours_offerts">Yours Offers</string>

	<!--Strings related to Add Offer Activity-->
	<string name="title_activity_add_offer">Add offer</string>
	<string name="link">Link</string>
	<string name="city">City</string>
	<string name="street">Street</string>
	<string name="distance_km">Distance(km)</string>
	<string name="number_of_items_for_you">Number of items (for you)</string>
	<string name="number_of_items_to_get_bonus">Number of items to get bonus</string>
	<string name="delivery_date">Delivery date</string>
	<string name="addofferbutton">Add offer</string>
	<string name="error_offer_link">Link is not correct</string>
	<string name="error_offer_city">Location is not correct</string>
	<string name="error_offer_street">Street is not correct</string>
	<string name="error_offer_distance">Distance is not correct</string>
	<string name="error_offer_forU">Number of items for you is not correct</string>
	<string name="error_offer_to_get_bonus">Number of items to get bonus is not correct</string>
	<string name="error_offer_to_delivery">Delivery date is not correct</string>
	<string name="error_offer_forU_gt_bonus">Items for you can not be grater than items to get bonus</string>
	<string name="error_offer_can_not_send_data">Can not send data</string>
	<string name="expiried_date">Expiried date</string>
	<string name="http_example_com_item_select">http://example.com/item/select</string>

	<string name="offer_details_page_title">Details</string>
	<string name="invitations_page_title">Invitations</string>
	<string name="chat_page_title">Chat</string>

	<string name="proposed_meeting_place">Proposed meeting place:</string>
	<string name="count_of_users">Count of users:</string>
	<string name="send">Send</string>
	<string name="enter_message">Enter message</string>

	<string name="error_internet_connection">Check your internet connection</string>
	<string name="title_activity_offer">Offer</string>
	<string name="title_activity_login">Buy It Together!</string>
	<string name="title_activity_map">Proposed meeting place</string>
	<string name="edit_mode">Edit mode</string>
	<string name="update">Update</string>
	<string name="register_account">Register account</string>
	<string name="check_your_email">Check your email and activate account</string>
	<string name="user_already_exists">User already exists</string>
	<string name="location">Location</string>

</resources>
