<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:id="@+id/fragment_offer_id"
		tools:context=".ui.fragment.OfferFragment"
>

	<ProgressBar
			style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/add_offer_progress_bar" android:visibility="gone"/>

	<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
	              android:orientation="vertical" android:id="@+id/add_offer_form">
		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:orientation="vertical">

			<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/link"
					android:id="@+id/linkTextInputId"
					android:inputType="textUri"
					android:layout_margin="5dp"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/location"
					android:id="@+id/locationTextInputId"
					android:layout_margin="5dp" android:singleLine="false"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/distance_km"
					android:id="@+id/distanceInput"
					android:layout_margin="5dp" android:inputType="numberDecimal"/>
		</android.support.design.widget.TextInputLayout>
		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/number_of_items_for_you"
					android:id="@+id/numOfItemsForYouInput"
					android:layout_margin="5dp" android:inputType="numberSigned"/>
		</android.support.design.widget.TextInputLayout>
		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/numOfItemsToGetBonusInput"
					android:hint="@string/number_of_items_to_get_bonus"
					android:layout_margin="5dp" android:inputType="numberSigned"/>
		</android.support.design.widget.TextInputLayout>
		<TextView
				android:text="@string/delivery_date"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:id="@+id/textView" android:ems="10"
				android:textSize="18sp"
				android:layout_margin="5dp"/>
		<CalendarView
				android:layout_width="match_parent"
				android:firstDayOfWeek="2"
				android:layout_height="wrap_content" android:id="@+id/calendarView" android:layout_margin="5dp"/>
	</LinearLayout>
</LinearLayout>